ammopath